# vr-pointcloud

./: .gitignore  CMakeLists.txt  README.md  actions.json  bindings_vive_controller.json
include/: app.h  pointcloud.h  ptx_reader.h  render_model.h  scene_manager.h  shader_program.h
shader/: pointcloud.frag  pointcloud.vert  render_model.frag  render_model.vert  vr_view.frag  vr_view.vert
src/: app.cpp  main.cpp  pointcloud.cpp  ptx_reader.cpp  render_model.cpp  scene_manager.cpp  shader_program.cpp
